# flask_learning

./: main.py  pyproject.toml  requirements.txt
Flask/: .env  Hello.py  Httplearn.py  cookie.py  flash.py  formexam.py  forms.py  hello1.py  mail.py  redirect.py  session.py  static.py  student_data.py  upload.py
Flask/Sqlite3/: app.py  database.db  sijax.py  sql.py  sqlform.py  sqllearn.py  test.db
Flask/Sqlite3/instance/: students.sqlite3
Flask/Sqlite3/templates/: home.html  list.html  show_all.html  sijaxexample.html
Flask/templates/: contact.html  cookie.html  flash_index.html  hello.html  log_in.html  mail.html  readcookie.html  result_student.html  static.html  students.html  success.html  upload.html
